# gai

./: .gitignore  LICENSE  README.md  Strategy.md  build_script.py  gai.py  justfile  pyproject.toml  ruff.toml
.gai/templates/layout/: base_conversation.j2
.gai/templates/partials/: output_format.j2
.gai/templates/prompts/: demo_recursion.j2
.github/workflows/: ci.yml  release.yml
docs/: templates.md
goals/template-list-browse/: Strategy.md
goals/templates/: Specification.md  Strategy.md
src/gai/: __init__.py  __main__.py  cli.py  config.py  config_model.py  exceptions.py  generation.py  template_catalog.py  template_interface.py  templates.py
tests/: __init__.py  test_cli.py  test_cli_template_aliases.py  test_cli_template_inspect.py  test_config.py  test_config_model.py  test_config_templates.py  test_edge_cases_robustness.py  test_generation.py  test_generation_capture_tag.py  test_integration.py  test_named_templates_integration.py  test_new_cli.py  test_template_catalog.py  test_template_interface.py  test_template_list_browse.py  test_template_recursion.py  test_template_variable_escaping.py  test_templates.py  test_templates_resolution.py
